--- a/src/CSS/style.css
+++ b/src/CSS/style.css
@@ -23,7 +23,7 @@ body h1 {
     justify-content: space-evenly
 }
 .original-container div, .copy-container div {
-    padding:20px;
+    margin:20px;
 }
 
 .copies {
